[metadata]
name=openhub
version=0.0.96
author=Ganon Pierce
author_email=ganonp@gmail.com
description=An open source iOT controller.
long_description=file: README.md
long_description_content_type=text/markdown
url=https://github.com/ganonp/GardenHub


[options]
include_package_data = True
package_dir =
   = src
packages = find:
python_requires = >=3.6
install_requires =
  markdown
  adafruit-circuitpython-pm25
  Adafruit-Blinka==6.10.1
  adafruit-circuitpython-busdevice==5.0.6
  adafruit-circuitpython-mcp3xxx==1.4.5
  adafruit-circuitpython-register==1.9.5
  adafruit-circuitpython-veml7700==1.1.7
  Adafruit-GPIO==1.0.3
  Adafruit-PlatformDetect==3.13.3
  Adafruit-PureIO==1.1.8
  asgiref==3.3.4
  asn1crypto==0.24.0
  attrs==21.2.0
  autobahn==21.3.1
  Automat==20.2.0
  certifi==2018.8.24
  cffi==1.14.5
  chardet==3.0.4
  constantly==15.1.0
  cryptography==3.4.7
  curve25519-donna==1.3
  daphne==3.0.2
  ed25519==1.5
  entrypoints==0.3
  h11==0.12.0
  HAP-python[QRCode]
  hyperlink==21.0.0
  idna==2.6
  ifaddr==0.1.7
  incremental==21.3.0
  keyring==17.1.1
  keyrings.alt==3.1.1
  paho-mqtt==1.5.1
  pyasn1==0.4.8
  pyasn1-modules==0.2.8
  pycparser==2.20
  pycrypto==2.6.1
  pyftdi==0.53.1
  pyOpenSSL==20.0.1
  pyserial==3.5
  pytz==2021.1
  pyxdg==0.25
  requests==2.21.0
  SecretStorage==2.3.1
  service-identity==21.1.0
  six==1.12.0
  sqlparse==0.4.1
  ssh-import-id
  sysv-ipc==1.1.0
  Twisted==21.2.0
  txaio==21.2.1
  typing-extensions==3.10.0.0
  urllib3==1.24.1
  websockets==9.1
  zeroconf==0.31.0
  zope.interface==5.4.0
  RPi.GPIO
  RPi.Sensor
;
[options.package_data]
* =
  *.json

[options.packages.find]
where = src
;
;[options.data_files]
;OpenHub =
;  ~/src/OpenHub/src/OpenHub/*.json